--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 1000px) {
   .header {
     display: none;
   }
@@ -46,4 +46,10 @@
     margin-right: 3px;
 
   }
+
+  .content-title .content-meta {
+    float: none;
+    padding-top: 20px;
+  }
+
 }
